gccida/c3/reload_as_needed
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/reload1.c:4319:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type *v39; // rbx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/reload1.c:4337:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v57; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/reload1.c:4341:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v61; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/reload1.c:4504:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v225; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/reload1.c:4542:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inmode; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/reload1.c:4548:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v269; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/reload1.c:4581:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v302; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/reload1.c:4582:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v303; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/reload1.c:4584:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v305; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/reload1.c:4587:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v308; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/reload1.c:4588:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v309; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/reload1.c:4589:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v310; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/reload1.c:4592:4: error: expected ';' after expression
rtx v313; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/reload1.c:4592:5: error: use of undeclared identifier 'v313'
rtx v313; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/reload1.c:4596:6: error: use of undeclared identifier 'v317'
rtx *v317; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/reload1.c:4619:4: error: expected ';' after expression
rtx v340; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/reload1.c:4619:5: error: use of undeclared identifier 'v340'
rtx v340; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/reload1.c:4622:4: error: expected ';' after expression
rtx v343; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/reload1.c:4622:5: error: use of undeclared identifier 'v343'
rtx v343; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_as_needed/src/obj/reload1.o] Error 1
